--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<div>
 		<h1>Animal Hang Man!</h1>
-		<a class="flag" href="https://gtheperson.github.io/hagman/French/hangman.html">
+		<a class="flag" href="https://gtheperson.github.io/hagman/French/">
 			<img class="flagpic" src="https://i.imgur.com/ITl6tnQ.png" alt="french-flag">
 		</a>	
 		
