--- a/French/index.html
+++ b/French/index.html
@@ -13,7 +13,7 @@
 	
 	<div>
 		<h1>Le Pendu avec des Animaux!</h1>
-		<a class="flag" href="http://gtheperson.atwebpages.com/hangman/hangman.html">
+		<a class="flag" href="http://gtheperson.github.io/hangman">
 			<img class="flagpic" src="https://i.imgur.com/ovMMQEm.png" alt="UK-flag">
 		</a>	
 		
